# Customer-churn-prediction

./: .gitignore  README.md  app.py  main.py  predict.py  pyproject.toml  requirements.txt  setup.py  template.py
configs/: config.yaml  params.yaml  schema.yaml
src/customer_churn/components/: data_ingestion.py
src/customer_churn/components/data_eda/: analyzers.py  interface.py  orchestrator.py  strategies.py  visualizers.py
src/customer_churn/components/data_ingestion/: __init__.py  factory.py  interface.py  orchestrator.py  strategies.py
src/customer_churn/components/data_transformation/: interface.py  operations.py  orchestrator.py
src/customer_churn/components/data_validation/: interface.py  orchestrator.py  strategies.py
src/customer_churn/components/model_evaluation/: orchestrator.py
src/customer_churn/components/model_trainer/: factory.py  orchestrator.py
src/customer_churn/config/: configuration.py
src/customer_churn/entity/: config_entity.py
src/customer_churn/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_eda.py  stage_03_data_validation.py  stage_04_data_transformation.py  stage_05_model_trainer.py  stage_06_model_evaluation.py
src/customer_churn/utils/: common.py  logging_setup.py
