[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "config-box>=0.2.1600119743",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "python-box>=7.4.1",
    "requests>=2.34.2",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "shap>=0.40.0",
    "xgboost>=1.5.0",
]

# Entry point: CLI command name → function
[project.scripts]
churn = "customer_churn.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/customer_churn"]
